<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">True Or False</string>
    <string name="q1">Q1 : It\'s possible to set visibility of some view using view.setVisibility(View.INVISIBLE)
        from code .</string>
    <string name="q2">Q2 : In order to set text in some text view like this question.setText(getResources().getText(id)); 
        you must explicitly specify that question is not a general View but a specific TextView</string>
    <string name="q3">Q3 : To prevent onCreate from being called each time device\'s orientation is being changed , 
        you can add OnlyOnce to the call of the base class , like this: super.onCreate(savedInstanceState,\"OnlyOnce\")"</string>
    
    <string name="trueText">True</string>
    <string name="FalseText">False</string>
    
    <string name="CorrectText">Correct !</string>
    <string name="WrongText"> Sorry , you are wrong</string>
    
    
    <string name="Next">Next</string>
    <string name="TheEnd">The End :) </string>

</resources>
