<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/q1"
        android:textSize="25sp" />
     
     
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/question"
        android:text="@string/trueText"
        android:onClick="trueClick" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button1"  
        android:layout_alignBottom="@id/button1"  
        android:layout_marginRight="30dp"  
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp" 
        android:text="@string/FalseText" 
        android:layout_below="@id/question"
        android:onClick="falseClick"/>

   

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/CorrectText" 
        android:textSize="35sp"
        android:layout_below="@id/button1"
        android:visibility = "invisible"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/Next" 
        android:visibility = "invisible"
        android:onClick="nextClick"/>

</RelativeLayout>